# boxPackingOptimization

./: README.md  pyproject.toml
boxsize_opt/: box.py  filter.py  optimization_model.py  packing.py  padberg.py  padberg.py~  product.py  utils.py
scripts/: boxCount.csv  boxCountClubbed.csv  box_optimization.py  minimal_box_sets.py  padberg_TorF.py  padberg_check.py  padberg_optimization.py  padberg_testcase.py  probable_boxes.py  process_data.py  stochastic.py
tests/: test_eligible_boxes.py  test_padberg.py  test_utils.py
